@@ -55,13 +55,18 @@ cairo_ps(filename = if(onefile) "Rplots.ps" else "Rplot\%03d.ps",
   SVG (Scalar Vector Graphics) is a W3C standard for vector graphics.
   See \url{http://www.w3.org/Graphics/SVG/}.  The output is SVG version
   1.1 for \code{onefile = FALSE} (the default), otherwise SVG 1.2.  (Very few
-  SVG viewers are capable of displaying multi-page SVG files.)
+  SVG viewers are capable of displaying multi-page SVG files.)  Although
+  this only requires cairo >= 1.2, the output produced by cairo 1.2.4
+  (in Centos/RHEL 5) is incorrect.
 
   Note that unlike \code{\link{postscript}} and \code{\link{pdf}},
   \code{cairo_pdf} and \code{cairo_ps} sometimes record \emph{bitmaps}
   and not vector graphics: a resolution of 72dpi is used.  On the other
   hand, they can (on suitable platforms) include a much wider range of
-  UTF-8 glyphs, and embed the fonts used.  They are somewhat experimental.
+  UTF-8 glyphs, and embed the fonts used.
+
+  The output produced by \code{cairo_ps(onefile = FALSE)} will be
+  encapsulated postscript on a platform with cairo >= 1.6.
 
   \R can be compiled without support for any of these
   devices: this will be reported if you attempt to use them on a system
